--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-	"scripts": {
-		"server": "cd server && nodemon app.js",
-		"client": "cd client && npm run start",
-		"start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
-	},
-	"dependencies": {
-		"concurrently": "^8.2.0",
-		"cors": "^2.8.5",
-		"dotenv": "^16.3.1",
-		"express": "^4.18.2",
-		"mongoose": "^7.4.3",
-		"morgan": "^1.10.0"
-	},
-	"devDependencies": {
-		"nodemon": "^3.0.1"
-	}
-=======
   "name": "mapping101",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "server": "cd server && nodemon app.js",
+    "client": "cd client && npm run start",
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
+    "cors": "^2.8.5",
     "d3": "^7.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.4.3",
+    "morgan": "^1.10.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -35,11 +31,10 @@
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1"
   },
   "eslintConfig": {
     "extends": [
@@ -58,8 +53,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
