--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
 		"start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
 	},
 	"dependencies": {
+		"chart.js": "^4.3.3",
 		"concurrently": "^8.2.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"mongoose": "^7.4.3",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"react-chartjs-2": "^5.2.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.0.1"
