--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"ag-charts-react": "^8.0.6",
 		"axios": "^1.4.0",
 		"chart.js": "^4.3.3",
 		"d3": "^7.8.5",
