--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 		"start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
 	},
 	"dependencies": {
+		"@fortawesome/free-solid-svg-icons": "^6.4.2",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"ag-charts-react": "^8.1.0",
 		"chart.js": "^4.3.3",
 		"concurrently": "^8.2.0",
