--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
 		"@fortawesome/free-solid-svg-icons": "^6.4.2",
 		"@fortawesome/react-fontawesome": "^0.2.0",
 		"ag-charts-react": "^8.1.0",
+		"axios": "^1.4.0",
 		"chart.js": "^4.3.3",
 		"concurrently": "^8.2.0",
 		"cors": "^2.8.5",
+		"d3": "^7.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"mongoose": "^7.4.3",
 		"morgan": "^1.10.0",
-		"react-chartjs-2": "^5.2.0"
+		"react-chartjs-2": "^5.2.0",
+		"react-router-dom": "^6.15.0",
+		"react-scripts": "^5.0.1",
+		"react-spinners": "^0.13.8"
 	},
 	"devDependencies": {
+		"eslint-config-react-app": "^7.0.1",
 		"nodemon": "^3.0.1"
 	}
 }
